feat: export HMRC CSV + summary
- Add export_hmrc_csv tool to server.py
- Implement HMRC categorization with buckets: Income, Bank Interest, Travel, Office Costs, Utilities, Bank charges, General expenses
- CSV format: Date (DD/MM/YYYY), Description, Amount, Currency, HMRC Category
- Generate filename: hmrc_export_<account>_<from>_<to>.csv
- Return summary with totals and top 3 expense categories
- Add comprehensive tests in tests/test_export_hmrc_csv.py
- Update test_schema.py to include new tool

--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,38 @@
-# Ignore Python cache
+# MCP local overrides
+.cursor/mcp.local.json
+
+# Python
 __pycache__/
-*.pyc
-*.pyo
-*.pyd
+*.py[cod]
+*$py.class
+*.so
 .Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
 # Virtual environments
-.venv/
 venv/
 env/
 ENV/
+.venv/
 
-# Secrets and credentials
-*.env
-mcp.local.json
-secrets.json
-
-# Don't push real credentials
-openbankingMCP/secrets.json
-
-# IDE files
+# IDE
 .vscode/
 .idea/
-*.swp
-*.swo
 
-# OS files
+# OS
 .DS_Store
 Thumbs.db
-
-# Logs
-*.log
-logs/
-
-# Temporary files
-*.tmp
-*.temp
