--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,38 @@
-# MCP local overrides
-.cursor/mcp.local.json
-
-# Python
+# Ignore Python cache
 __pycache__/
-*.py[cod]
-*$py.class
-*.so
+*.pyc
+*.pyo
+*.pyd
 .Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
 
 # Virtual environments
+.venv/
 venv/
 env/
 ENV/
-.venv/
 
-# IDE
+# Secrets and credentials
+*.env
+mcp.local.json
+secrets.json
+
+# Don't push real credentials
+openbankingMCP/secrets.json
+
+# IDE files
 .vscode/
 .idea/
+*.swp
+*.swo
 
-# OS
+# OS files
 .DS_Store
 Thumbs.db
+
+# Logs
+*.log
+logs/
+
+# Temporary files
+*.tmp
+*.temp
