--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,20 @@
 # MCP local overrides
 .cursor/mcp.local.json
 
+# Node/Next build
+node_modules/
+.next/
+out/
+dist/
+web/node_modules/
+web/.next/
+web/out/
+web/dist/
+
 # Python
 __pycache__/
 *.py[cod]
-*$py.class
+*.class
 *.so
 .Python
 build/
@@ -29,14 +39,20 @@ env/
 ENV/
 .venv/
 
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 # IDE
 .vscode/
 .idea/
 
-# Node.js
-node_modules/
-.next/
-out/
+# Local/test data
+*.csv
+repo-snapshot-*.md
 
 # OS
 .DS_Store
